Move search and controls to sidebar only on mobile

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   </header>
 
   <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation" hidden>
+    <div class="sidebar-controls"></div>
     <ul>
       <li><a href="#setup-manager">Manage Project</a></li>
       <li><a href="#setup-config">Device Selection</a></li>
