--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="description" content="Plan your camera project and calculate power consumption &amp; battery life." />
+  <meta name="description" content="Plan your film rig and calculate power consumption &amp; battery life." />
   <meta property="og:title" content="Cine List" />
-  <meta property="og:description" content="Plan your camera project and calculate power consumption &amp; battery life." />
+  <meta property="og:description" content="Plan your film rig and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#f9f9f9" />
@@ -70,7 +70,7 @@
 
   <main id="mainContent" tabindex="-1">
 
-  <p id="tagline">Plan your camera project and calculate power consumption &amp; battery life.</p>
+  <p id="tagline">Plan your film rig and calculate power consumption &amp; battery life.</p>
 
   <section id="setup-manager">
     <h2 id="setupManageHeading">Manage Project</h2>
