Allow multiple prep and shooting periods

--- a/index.html
+++ b/index.html
@@ -978,17 +978,15 @@
         <div id="crewContainer"></div>
         <button type="button" id="addPersonBtn">+</button>
       </div>
-      <div class="form-row">
-        <label for="prepStart" id="prepLabel">Prep Days:</label>
-        <input type="date" id="prepStart" name="prepStart" aria-labelledby="prepLabel" />
-        <span>to</span>
-        <input type="date" id="prepEnd" name="prepEnd" aria-labelledby="prepLabel" />
+      <div class="form-row" id="prepListRow">
+        <label id="prepLabel">Prep Days:</label>
+        <div id="prepContainer"></div>
+        <button type="button" id="addPrepBtn">+</button>
       </div>
-      <div class="form-row">
-        <label for="shootStart" id="shootLabel">Shooting Days:</label>
-        <input type="date" id="shootStart" name="shootStart" aria-labelledby="shootLabel" />
-        <span>to</span>
-        <input type="date" id="shootEnd" name="shootEnd" aria-labelledby="shootLabel" />
+      <div class="form-row" id="shootListRow">
+        <label id="shootLabel">Shooting Days:</label>
+        <div id="shootContainer"></div>
+        <button type="button" id="addShootBtn">+</button>
       </div>
       <div class="form-row">
         <label for="deliveryResolution">Delivery Resolution:</label>
