chore: rename app to Power Planner

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="description" content="Plan your film rig and calculate power consumption &amp; battery life." />
-  <meta property="og:title" content="Cine List" />
+  <meta property="og:title" content="Power Planner" />
   <meta property="og:description" content="Plan your film rig and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#f9f9f9" />
-  <meta name="application-name" content="Cine List" />
-  <meta name="apple-mobile-web-app-title" content="Cine List" />
+  <meta name="application-name" content="Power Planner" />
+  <meta name="apple-mobile-web-app-title" content="Power Planner" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" />
   <meta name="referrer" content="no-referrer" />
   <meta name="color-scheme" content="light dark" />
-  <title>Cine List</title>
+  <title>Power Planner</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
@@ -31,7 +31,7 @@
   <header id="topBar">
     <div class="branding">
       <img src="icon.svg" alt="" id="logo" />
-      <h1 id="mainTitle">Cine List</h1>
+      <h1 id="mainTitle">Power Planner</h1>
     </div>
     <button id="menuToggle" aria-label="Menu" aria-expanded="false">☰</button>
     <div class="feature-search">
