Remove Teradek Serv + Link from iOS video option

--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
           <option value="Gaffer Monitor 7&quot; handheld">Gaffer Monitor 7&quot; handheld</option>
           <option value="Director Monitor 15-21&quot;">Director Monitor 15-21&quot;</option>
           <option value="Combo Monitor 15-21&quot;">Combo Monitor 15-21&quot;</option>
-          <option value="IOS Video (Teradek Serv + Link)">IOS Video (Teradek Serv + Link)</option>
+          <option value="IOS Video">IOS Video</option>
           <option value="DoP Monitor 7&quot; handheld">DoP Monitor 7&quot; handheld</option>
           <option value="DoP Monitor 15-21&quot;">DoP Monitor 15-21&quot;</option>
         </select>
