--- a/index.html
+++ b/index.html
@@ -674,6 +674,20 @@
         <label for="accentColorInput" id="accentColorLabel">Accent color</label>
         <input type="color" id="accentColorInput" value="#001589" />
       </div>
+      <h3 id="accessibilityHeading">Accessibility</h3>
+      <div class="form-row">
+        <label for="settingsHighContrast" id="settingsHighContrastLabel">High contrast</label>
+        <input type="checkbox" id="settingsHighContrast" />
+      </div>
+      <h3 id="backupHeading">Backup &amp; Restore</h3>
+      <div class="button-row">
+        <button id="backupSettings">Backup</button>
+        <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
+        <button id="restoreSettings">Restore</button>
+      </div>
+      <h3 id="aboutHeading">About &amp; Support</h3>
+      <p id="aboutVersion">Version 1.0.0</p>
+      <p><a href="https://github.com" id="supportLink" target="_blank">Support</a></p>
       <div class="button-row">
         <button id="settingsSave">Save</button>
         <button id="settingsCancel">Cancel</button>
