fix: set default font variable

--- a/index.html
+++ b/index.html
@@ -691,6 +691,23 @@
         <label for="accentColorInput" id="accentColorLabel">Accent color</label>
         <input type="color" id="accentColorInput" value="#001589" />
       </div>
+      <div class="form-row">
+        <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
+        <select id="settingsFontSize">
+          <option value="14">14px</option>
+          <option value="16">16px</option>
+          <option value="18">18px</option>
+        </select>
+      </div>
+      <div class="form-row">
+        <label for="settingsFontFamily" id="settingsFontFamilyLabel">Font</label>
+        <select id="settingsFontFamily">
+          <option value="'Ubuntu', sans-serif">Ubuntu</option>
+          <option value="'Arial', sans-serif">Arial</option>
+          <option value="'Times New Roman', serif">Times New Roman</option>
+          <option value="'Courier New', monospace">Courier New</option>
+        </select>
+      </div>
       <h3 id="accessibilityHeading">Accessibility</h3>
       <div class="form-row">
         <label for="settingsHighContrast" id="settingsHighContrastLabel">High contrast</label>
