Rename battery label and align selector width

--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
       <select id="batteryPlateSelect" aria-labelledby="batteryPlateLabel"></select>
     </div>
 
-    <div class="form-row">
-      <label for="batterySelect" id="batteryLabel">V-Mount Battery:</label>
-      <div class="select-wrapper">
-        <select id="batterySelect" aria-labelledby="batteryLabel"></select>
+      <div class="form-row">
+        <label for="batterySelect" id="batteryLabel">Battery:</label>
+        <div class="select-wrapper">
+          <select id="batterySelect" aria-labelledby="batteryLabel"></select>
+        </div>
       </div>
-    </div>
     <div class="form-row" id="batteryHotswapRow">
       <label for="batteryHotswapSelect" id="batteryHotswapLabel">Battery Hotswap:</label>
       <div class="select-wrapper">
