docs: expand help and readme details

--- a/index.html
+++ b/index.html
@@ -906,6 +906,9 @@
           <ul>
             <li>Every dropdown and list can be filtered via its search box.</li>
             <li>The help dialog itself is searchable using the field at the top.</li>
+            <li>The global search bar jumps to features, device selectors or help topics; press Enter to navigate and × to clear.</li>
+            <li>Press <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd> on macOS) to focus the nearest search box.</li>
+            <li>Use the × button in any search field to reset the query and show all items.</li>
           </ul>
         </section>
         <section data-help-section id="helpDialogHelp">
@@ -913,6 +916,7 @@
           <ul>
             <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd>, <kbd>F1</kbd> or <kbd>Ctrl</kbd>+<kbd>/</kbd> (works even while typing).</li>
             <li>Use the search field to filter topics; the query resets when closed.</li>
+            <li>Click the × button to clear the search and show all topics again.</li>
             <li>Press <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd> on macOS) to jump to the search box.</li>
             <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
           </ul>
