Add missing device categories and enable editing attributes

--- a/index.html
+++ b/index.html
@@ -619,6 +619,11 @@
         <ul id="videoList" class="device-ul"></ul>
       </div>
       <div class="device-category">
+        <h4 id="category_wirelessReceivers">Wireless Receivers</h4>
+        <input type="search" id="wirelessReceiverListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="wirelessReceiverList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
         <h4 id="category_fiz_motors">FIZ Motors</h4>
         <input type="search" id="motorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="motorList" class="device-ul"></ul>
@@ -639,6 +644,11 @@
         <ul id="batteryList" class="device-ul"></ul>
       </div>
       <div class="device-category">
+        <h4 id="category_batteryHotswaps">Battery Hotswaps</h4>
+        <input type="search" id="batteryHotswapListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="batteryHotswapList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
         <h4 id="category_accessory_batteries">Accessory Batteries</h4>
         <input type="search" id="accessoryBatteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="accessoryBatteryList" class="device-ul"></ul>
@@ -647,6 +657,11 @@
         <h4 id="category_cables">Cables</h4>
         <input type="search" id="cableListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="cableList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
+        <h4 id="category_cages">Cages</h4>
+        <input type="search" id="cageListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="cageList" class="device-ul"></ul>
       </div>
       <div class="device-category">
         <h4 id="category_camera_support">Camera Support</h4>
