--- a/index.html
+++ b/index.html
@@ -739,6 +739,8 @@
       <h3 id="aboutHeading">About &amp; Support</h3>
       <p id="aboutVersion">Version 1.0.0</p>
       <p><a href="https://github.com" id="supportLink" target="_blank">Support</a></p>
+      <div class="button-row">
+      </div>
       <div class="button-row action-buttons">
         <button id="settingsSave">Save</button>
         <button id="settingsCancel">Cancel</button>
