Populate category fields dynamically and include schema attributes

--- a/index.html
+++ b/index.html
@@ -270,23 +270,7 @@
 <h3 id="addDeviceHeading">Add New Device</h3>
     <div class="form-row">
       <label for="newCategory" id="categoryLabel">Category:</label>
-      <select id="newCategory">
-        <option value="cameras">Camera</option>
-        <option value="viewfinders">Viewfinder</option>
-        <option value="monitors">Monitor</option>
-        <option value="video">Wireless Video</option>
-        <option value="wirelessReceivers">Wireless Receiver</option>
-        <option value="fiz.motors">FIZ Motor</option>
-        <option value="fiz.controllers">FIZ Controller</option>
-        <option value="fiz.distance">FIZ Distance</option>
-        <option value="batteries">Battery</option>
-        <option value="batteryHotswaps">Battery Hotswap</option>
-        <option value="accessories.batteries">Accessory Battery</option>
-        <option value="accessories.cables">Cable</option>
-        <option value="accessories.cages">Camera Cage</option>
-        <option value="accessories.cameraSupport">Camera Support</option>
-        <option value="accessories.chargers">Charger</option>
-      </select>
+      <select id="newCategory"></select>
     </div>
     <div class="form-row" id="subcategoryField" hidden>
       <label for="newSubcategory" id="subcategoryLabel">Subcategory:</label>
