feat: add director monitor category

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
         <option value="cameras">Camera</option>
         <option value="viewfinders">Viewfinder</option>
         <option value="monitors">Monitor</option>
+        <option value="directorMonitors">Director Monitor</option>
         <option value="video">Wireless Video</option>
         <option value="wirelessReceivers">Wireless Receiver</option>
         <option value="fiz.motors">FIZ Motor</option>
@@ -612,6 +613,11 @@
         <h4 id="category_monitors">Monitors</h4>
         <input type="search" id="monitorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="monitorList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
+        <h4 id="category_directorMonitors">Director Monitors</h4>
+        <input type="search" id="directorMonitorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="directorMonitorList" class="device-ul"></ul>
       </div>
       <div class="device-category">
         <h4 id="category_video">Wireless Video</h4>
