--- a/index.html
+++ b/index.html
@@ -755,10 +755,12 @@
             <li>Visualize power and video connections with an interactive diagram—drag to rearrange, pan, snap to grid, reset the view, zoom and download the layout.</li>
             <li>Compare battery runtimes and check against safe output limits.</li>
             <li>Customize the device database with your own gear.</li>
+            <li>Star frequently used devices to pin them at the top of dropdowns.</li>
             <li>Generate categorized gear lists and printable project overviews with one click.</li>
             <li>Refine runtime estimates with user feedback and a visual weighting dashboard.</li>
             <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
             <li>Switch languages, toggle dark or playful pink themes and work fully offline. Theme settings persist.</li>
+            <li>Force reload clears cached files and updates the app without deleting saved data.</li>
             <li>Cameras with both V- and B-Mount plates let you swap battery types; the list updates automatically.</li>
           </ul>
         </section>
@@ -912,6 +914,7 @@
             <li>Every dropdown and list can be filtered via its search box.</li>
             <li>The help dialog itself is searchable using the field at the top.</li>
             <li>The global search bar jumps to features, device selectors or help topics; press Enter to navigate and × to clear.</li>
+            <li>Click the star beside a dropdown to mark favorites; pinned items move to the top and persist between sessions.</li>
             <li>Press <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd> on macOS) to focus the nearest search box.</li>
             <li>Use the × button in any search field to reset the query and show all items.</li>
           </ul>
@@ -1038,6 +1041,10 @@
           <details class="faq-item">
             <summary>Which device categories are available?</summary>
             <p>Categories include Camera, Monitor, Wireless Video, FIZ Motors, FIZ Controllers, Distance Sensor, Battery Plate and V‑/B‑Mount Battery.</p>
+          </details>
+          <details class="faq-item">
+            <summary>How do I clear cached files or update the app?</summary>
+            <p>Use the <em>Force reload</em> button (🔄) in the top bar to clear cached files and reload without losing saved data.</p>
           </details>
           <details class="faq-item">
             <summary>Where does the device data come from?</summary>
