Rename batteries category label

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         <ul id="distanceList" class="device-ul"></ul>
       </div>
       <div class="device-category">
-        <h4 id="category_batteries">V-Mount Batteries</h4>
+        <h4 id="category_batteries">Batteries</h4>
         <input type="search" id="batteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="batteryList" class="device-ul"></ul>
       </div>
