--- a/index.html
+++ b/index.html
@@ -358,6 +358,25 @@
           <div id="timecodeContainer" class="flex-1"></div>
         </div>
       </div>
+      <div class="camera-subsection">
+        <h4 id="cameraSpecsHeading">Camera Specs</h4>
+        <div class="form-row">
+          <label for="cameraWeight" id="cameraWeightLabel">Weight (g):</label>
+          <input type="number" id="cameraWeight" step="1" aria-labelledby="cameraWeightLabel" />
+        </div>
+        <div class="form-row">
+          <label id="cameraRecordingCodecsLabel">Recording Codecs:</label>
+          <div id="recordingCodecsContainer" class="flex-1"></div>
+        </div>
+        <div class="form-row">
+          <label id="cameraSensorModesLabel">Sensor Modes:</label>
+          <div id="sensorModesContainer" class="flex-1"></div>
+        </div>
+        <div class="form-row">
+          <label id="cameraResolutionsLabel">Resolutions:</label>
+          <div id="resolutionsContainer" class="flex-1"></div>
+        </div>
+      </div>
     </div>
     <div id="monitorFields" class="hidden">
       <div class="monitor-subsection">
