Refine settings dialog layout

--- a/index.html
+++ b/index.html
@@ -674,60 +674,69 @@
   <div id="settingsDialog" role="dialog" aria-modal="true" aria-labelledby="settingsTitle" hidden>
     <div class="settings-content">
       <h2 id="settingsTitle">Settings</h2>
-      <div class="form-row">
-        <label for="settingsLanguage" id="settingsLanguageLabel">Language</label>
-        <select id="settingsLanguage">
-          <option value="en">English</option>
-          <option value="de">Deutsch</option>
-          <option value="es">Español</option>
-          <option value="fr">Français</option>
-          <option value="it">Italiano</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label for="settingsDarkMode" id="settingsDarkModeLabel">Dark mode</label>
-        <input type="checkbox" id="settingsDarkMode" />
-      </div>
-      <div class="form-row">
-        <label for="accentColorInput" id="accentColorLabel">Accent color</label>
-        <input type="color" id="accentColorInput" value="#001589" />
-      </div>
-      <div class="form-row">
-        <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
-        <select id="settingsFontSize">
-          <option value="14">14px</option>
-          <option value="16">16px</option>
-          <option value="18">18px</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label for="settingsFontFamily" id="settingsFontFamilyLabel">Font</label>
-        <select id="settingsFontFamily">
-          <option value="'Ubuntu', sans-serif">Ubuntu</option>
-          <option value="'Arial', sans-serif">Arial</option>
-          <option value="'Times New Roman', serif">Times New Roman</option>
-          <option value="'Courier New', monospace">Courier New</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label for="settingsLogo" id="settingsLogoLabel">Logo (SVG)</label>
-        <input type="file" id="settingsLogo" accept="image/svg+xml" />
-      </div>
-      <h3 id="accessibilityHeading">Accessibility</h3>
-      <div class="form-row">
-        <label for="settingsHighContrast" id="settingsHighContrastLabel">High contrast</label>
-        <input type="checkbox" id="settingsHighContrast" />
-      </div>
-      <h3 id="backupHeading">Backup &amp; Restore</h3>
-      <div class="button-row">
-        <button id="backupSettings">Backup</button>
-        <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
-        <button id="restoreSettings">Restore</button>
-      </div>
-      <h3 id="aboutHeading">About &amp; Support</h3>
-      <p id="aboutVersion">Version 1.0.0</p>
-      <p><a href="https://github.com" id="supportLink" target="_blank">Support</a></p>
-      <div class="button-row">
+      <div class="settings-sections">
+        <section class="settings-section" aria-labelledby="generalSettingsHeading">
+          <h3 id="generalSettingsHeading">General</h3>
+          <div class="form-row">
+            <label for="settingsLanguage" id="settingsLanguageLabel">Language</label>
+            <select id="settingsLanguage">
+              <option value="en">English</option>
+              <option value="de">Deutsch</option>
+              <option value="es">Español</option>
+              <option value="fr">Français</option>
+              <option value="it">Italiano</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <label for="settingsDarkMode" id="settingsDarkModeLabel">Dark mode</label>
+            <input type="checkbox" id="settingsDarkMode" />
+          </div>
+          <div class="form-row">
+            <label for="accentColorInput" id="accentColorLabel">Accent color</label>
+            <input type="color" id="accentColorInput" value="#001589" />
+          </div>
+          <div class="form-row">
+            <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
+            <select id="settingsFontSize">
+              <option value="14">14px</option>
+              <option value="16">16px</option>
+              <option value="18">18px</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <label for="settingsFontFamily" id="settingsFontFamilyLabel">Font</label>
+            <select id="settingsFontFamily">
+              <option value="'Ubuntu', sans-serif">Ubuntu</option>
+              <option value="'Arial', sans-serif">Arial</option>
+              <option value="'Times New Roman', serif">Times New Roman</option>
+              <option value="'Courier New', monospace">Courier New</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <label for="settingsLogo" id="settingsLogoLabel">Logo (SVG)</label>
+            <input type="file" id="settingsLogo" accept="image/svg+xml" />
+          </div>
+        </section>
+        <section class="settings-section" aria-labelledby="accessibilityHeading">
+          <h3 id="accessibilityHeading">Accessibility</h3>
+          <div class="form-row">
+            <label for="settingsHighContrast" id="settingsHighContrastLabel">High contrast</label>
+            <input type="checkbox" id="settingsHighContrast" />
+          </div>
+        </section>
+        <section class="settings-section" aria-labelledby="backupHeading">
+          <h3 id="backupHeading">Backup &amp; Restore</h3>
+          <div class="button-row">
+            <button id="backupSettings">Backup</button>
+            <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
+            <button id="restoreSettings">Restore</button>
+          </div>
+        </section>
+        <section class="settings-section" aria-labelledby="aboutHeading">
+          <h3 id="aboutHeading">About &amp; Support</h3>
+          <p id="aboutVersion">Version 1.0.0</p>
+          <p><a href="https://github.com" id="supportLink" target="_blank">Support</a></p>
+        </section>
       </div>
       <div class="button-row action-buttons">
         <button id="settingsSave">Save</button>
