Match logo fill with current theme background

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <defs>
           <style>
             .cls-1 { fill: var(--accent-color); }
-            .cls-2 { fill: #fdfdfd; }
+            .cls-2 { fill: var(--background-color, #fdfdfd); }
           </style>
         </defs>
         <rect class="cls-1" width="1024" height="1024" rx="128" ry="128" />
