Add smaller font size options

--- a/index.html
+++ b/index.html
@@ -695,9 +695,14 @@
       <div class="form-row">
         <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
         <select id="settingsFontSize">
+          <option value="10">10px</option>
+          <option value="12">12px</option>
           <option value="14">14px</option>
           <option value="16">16px</option>
           <option value="18">18px</option>
+          <option value="20">20px</option>
+          <option value="22">22px</option>
+          <option value="24">24px</option>
         </select>
       </div>
       <div class="form-row">
