Document settings personalization and cache reset

--- a/index.html
+++ b/index.html
@@ -777,6 +777,8 @@
             <li>Refine runtime estimates with user feedback and a visual weighting dashboard.</li>
             <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
             <li>Switch languages, toggle dark or playful pink themes and work fully offline. Theme settings persist.</li>
+            <li>Personalize the interface from Settings—adjust accent color, base font size and typeface, toggle high contrast and upload a custom logo that appears in backups and printable overviews.</li>
+            <li>Start fresh at any time with the Clear Local Cache button in Settings, which removes saved projects, custom devices, favorites and runtime feedback in one click.</li>
             <li>Force reload clears cached files and updates the app without deleting saved data.</li>
             <li>Cameras with both V- and B-Mount plates let you swap battery types; the list updates automatically.</li>
           </ul>
@@ -794,15 +796,17 @@
           <ul>
             <li>Use <strong>Save</strong> to store the current configuration in your browser. Press Enter or Ctrl+S (⌘S on macOS) to save quickly; the Save button stays disabled until a name is entered.</li>
             <li><strong>Share Project</strong> downloads a JSON file containing your selections, project requirements, gear list, runtime feedback and any custom devices so you can back up or share the setup.</li>
+            <li>Open <strong>Settings</strong> to fine-tune accent color, base font size, typeface and high contrast mode, upload a custom logo and manage full planner backups or restores.</li>
             <li>Select a JSON file in <strong>Shared Project</strong> and click <strong>Load</strong> to restore a shared configuration.</li>
             <li>Use <strong>Delete</strong> to remove the saved entry or <strong>Clear Current Project</strong> to wipe the current selection without touching saved copies.</li>
             <li><strong>Generate Overview</strong> produces a printable summary of any saved project.</li>
+            <li>Need a clean slate? Choose <strong>Clear Local Cache</strong> in Settings → Backup &amp; Restore to erase saved projects, custom devices, favorites and runtime submissions in one step.</li>
             </ul>
           </section>
         <section data-help-section id="projectRequirementsHelp">
           <h3><span class="help-icon" aria-hidden="true">🗒️</span>Project Requirements</h3>
           <ul>
-            <li>Capture details like DoP, shooting dates, resolutions, codecs and more for each project.</li>
+            <li>Capture production details such as production company, rental house, DoP, crew roles with email contacts, shooting dates, resolutions, codecs and more for each project.</li>
             <li>Multi-select lists let you specify multiple scenarios, accessories or monitoring setups.</li>
             <li>The information is saved with the project and included in printed overviews and gear lists.</li>
           </ul>
@@ -836,7 +840,8 @@
               <li>Monitoring preferences contribute default screens for each role (Director, DoP, Focus Puller, Client), matching video transmitters and pre‑bundled cable sets.</li>
               <li>The <strong>Project Requirements</strong> form acts as a template for the list. Each field adds context and gear:
                 <ul>
-                  <li><strong>Project Name</strong>, <strong>DoP</strong>, <strong>Prep</strong> and <strong>Shooting Days</strong> populate the printed header and can trigger weather gear with outdoor scenarios.</li>
+                  <li><strong>Project Name</strong>, <strong>Production Company</strong>, <strong>Rental House</strong>, <strong>DoP</strong>, <strong>Prep</strong> and <strong>Shooting Days</strong> populate the printed header and can trigger weather gear with outdoor scenarios.</li>
+                  <li><strong>Crew</strong> entries keep names, roles and email addresses attached so contact lists and call sheets stay current.</li>
                   <li><strong>Required Scenarios</strong> toggle accessory packs as described above.</li>
                   <li><strong>Camera Handle</strong>, <strong>Viewfinder Extension</strong> and <strong>User Button Layouts</strong> supply matching handles, VF extensions and notes for operators.</li>
                   <li><strong>Matte Box</strong> and <strong>Filter Set</strong> selections insert filter trays, donuts, adapters and storage cases.</li>
@@ -1029,7 +1034,7 @@
           </details>
           <details class="faq-item">
             <summary>How do I reset everything to the defaults?</summary>
-            <p>Open the device editor and choose <em>Export and Revert</em> to restore the default database. Delete projects individually using the Delete button.</p>
+            <p>Open the device editor and choose <em>Export and Revert</em> to restore the default database. Delete projects individually using the Delete button, or open <em>Settings → Backup &amp; Restore</em> and press <em>Clear Local Cache</em> to wipe saved projects, favorites and runtime data at once.</p>
           </details>
           <details class="faq-item">
             <summary>How do I change the language?</summary>
