Add smaller and bitter font sizes

--- a/index.html
+++ b/index.html
@@ -704,9 +704,11 @@
         <div class="form-row">
           <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
           <select id="settingsFontSize">
+            <option value="12">12px (Smaller)</option>
             <option value="14">14px</option>
             <option value="16">16px</option>
             <option value="18">18px</option>
+            <option value="20">20px (Bitter)</option>
           </select>
         </div>
         <div class="form-row">
