Improve settings help coverage

--- a/index.html
+++ b/index.html
@@ -812,6 +812,16 @@
             <li>Need a clean slate? Choose <strong>Clear Local Cache</strong> in Settings → Backup &amp; Restore to erase saved projects, custom devices, favorites and runtime submissions in one step.</li>
             </ul>
           </section>
+        <section data-help-section id="settingsHelp">
+          <h3><span class="help-icon" aria-hidden="true">⚙️</span>Settings &amp; Personalization</h3>
+          <ul>
+            <li>Switch languages instantly; the planner remembers your preference for next time.</li>
+            <li>Tune the interface with dark mode, high contrast, pink accents and a custom accent color to match your production.</li>
+            <li>Adjust the base font size or pick a different typeface. Add local fonts from your computer when the browser supports it.</li>
+            <li>Upload an SVG logo to brand printable overviews and configuration backups.</li>
+            <li>Use <strong>Backup</strong> to download a JSON snapshot of settings, projects, custom devices, favorites and runtime feedback; <strong>Restore</strong> loads a saved snapshot.</li>
+          </ul>
+        </section>
         <section data-help-section id="projectRequirementsHelp">
           <h3><span class="help-icon" aria-hidden="true">🗒️</span>Project Requirements</h3>
           <ul>
