--- a/impressum.html
+++ b/impressum.html
@@ -1,27 +1,69 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>Impressum</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="color-scheme" content="light dark" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" />
   <meta name="referrer" content="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+  <meta name="theme-color" content="#f9f9f9" />
+  <title>Impressum</title>
+  <link rel="icon" href="icon.svg" type="image/svg+xml" />
+  <link rel="icon" href="icon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="icon.png" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="static-theme.js" defer></script>
 </head>
-<body>
-  <main>
+<body class="static-page">
+  <a href="#mainContent" class="skip-link">Zum Inhalt springen</a>
+  <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
+  <header id="topBar">
+    <div class="branding">
+      <svg id="logo" viewBox="0 0 1024 1024" aria-hidden="true">
+        <defs>
+          <style>
+            .cls-1 { fill: var(--accent-color); }
+            .cls-2 { fill: #fff; }
+          </style>
+        </defs>
+        <rect class="cls-1" width="1024" height="1024" rx="128" ry="128" />
+        <path class="cls-1" d="M332.79,264.29c-66.13,6.4-105.19,79.54-74.31,138.73,35.25,67.58,131.84,67.97,167.69.65,35.6-66.85-18.81-146.6-93.38-139.38ZM532.8,264.3c-51.89,4.85-90.78,55.06-84.79,106.19,9.73,82.92,118.85,114.08,169.97,46.99,51.33-67.37-2.29-160.92-85.18-153.18ZM689.21,517.2l.28,157.8,82.46,50.54c9.27,5.08,19.04.97,20.1-10-.62-80.73,1-161.7-.82-242.28-2.55-6.41-9.86-10.22-16.21-6.74l-85.81,50.68ZM274.74,468.24c-12.21,3.53-19.68,12.51-20.77,25.23l.05,221.03c1.77,14.87,11.57,24.26,26.45,25.55h326.07c14.13-1.11,25.08-10,26.51-24.49v-223.08c-1.21-13.19-11.34-23.3-24.5-24.5l-333.8.28ZM672,530h-19v134h19v-134Z" />
+        <path class="cls-2" d="M274.74,468.24l333.8-.28c13.16,1.2,23.29,11.31,24.5,24.5v223.08c-1.43,14.49-12.37,23.38-26.51,24.49h-326.07c-14.89-1.28-24.69-10.68-26.45-25.55l-.05-221.03c1.09-12.71,8.56-21.7,20.77-25.23ZM467,582l14.91-68.61c-3.75-14.34-10.29-10.19-17.88-1.86-28.03,30.79-51.9,68.87-79.85,100.15-4.19,3.66-1.94,14.32,3.32,14.32h42.5l-14.07,67.5c.6,11.86,10.68,13.88,17.04,3.97l79.87-102.13c3.57-4.95,1.6-13.34-5.34-13.34h-40.5Z" />
+        <path class="cls-2" d="M532.8,264.3c82.89-7.74,136.51,85.82,85.18,153.18-51.12,67.08-160.24,35.92-169.97-46.99-6-51.12,32.9-101.34,84.79-106.19ZM539.79,321.27c-49.71,4.46-43.19,80.2,6.71,75.72,49.16-4.42,42.05-80.09-6.71-75.72Z" />
+        <path class="cls-2" d="M332.79,264.29c74.57-7.22,128.98,72.53,93.38,139.38-35.85,67.31-132.44,66.92-167.69-.65-30.87-59.18,8.09-132.33,74.31-138.73ZM315.35,332.35c-32.21,32.16,12.32,84.81,49.14,57.64,43.84-32.35-11.25-95.49-49.14-57.64Z" />
+        <path class="cls-2" d="M689.21,517.2l85.81-50.68c6.35-3.48,13.67.34,16.21,6.74,1.82,80.58.2,161.55.82,242.28-1.06,10.97-10.83,15.09-20.1,10l-82.46-50.54-.28-157.8Z" />
+        <rect class="cls-2" x="653" y="530" width="19" height="134" />
+        <path class="cls-1" d="M467,582h40.5c6.94,0,8.9,8.4,5.34,13.34l-79.87,102.13c-6.36,9.92-16.44,7.89-17.04-3.97l14.07-67.5h-42.5c-5.26,0-7.51-10.65-3.32-14.32,27.95-31.29,51.81-69.37,79.85-100.15,7.59-8.33,14.13-12.49,17.88,1.86l-14.91,68.61Z" />
+        <path class="cls-1" d="M539.79,321.27c48.76-4.38,55.87,71.3,6.71,75.72-49.9,4.48-56.42-71.26-6.71-75.72Z" />
+        <path class="cls-1" d="M315.35,332.35c37.9-37.85,92.98,25.3,49.14,57.64-36.82,27.17-81.35-25.48-49.14-57.64Z" />
+      </svg>
+      <h1 id="mainTitle">Cine Power Planner</h1>
+    </div>
+    <nav class="static-nav" aria-label="Sekundärnavigation">
+      <a class="button-link" href="index.html">Zurück zur App</a>
+    </nav>
+  </header>
+  <main id="mainContent" class="legal-content" tabindex="-1">
     <h1>Impressum</h1>
-    <h2>Angaben gemäß § 5 TMG</h2>
-    <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München</p>
-    <h2>Kontakt</h2>
-    <p>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
-    <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
-    <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München</p>
-    <h2>Haftung für Inhalte</h2>
-    <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-    <h2>Haftung für Links</h2>
-    <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-    <h2>Urheberrecht</h2>
-    <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+    <div class="legal-card">
+      <h2>Angaben gemäß § 5 TMG</h2>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München</p>
+      <h2>Kontakt</h2>
+      <p>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
+      <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München</p>
+      <h2>Haftung für Inhalte</h2>
+      <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+      <h2>Haftung für Links</h2>
+      <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+      <h2>Urheberrecht</h2>
+      <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+    </div>
   </main>
+  <footer id="siteFooter">
+    <a href="impressum.html">Impressum</a>
+    |
+    <a href="datenschutz.html">Datenschutz</a>
+  </footer>
 </body>
 </html>
